# frap-tool

./: .anjuta_sym_db.db  .gitignore  1m30s.tif  20s.tif  2m30s.tif  30s.tif  3m.tif  40s.tif  4m30s.tif  6m.tif  Makefile  Makefile.am  Makefile.in  README  ReadMe.txt  a_file.ps  aclocal.m4  chart.cc  config.h  config.h.in  config.status  configure  configure.ac  dataout.txt  fitting.cc  fitting.h  frap-tool.cpp  frap-tool.sln  frap-tool.vcproj  frap.cc  frap.h  fraptool-1.0.pc  fraptool.pc.in  fraptoolconfig.h  gaussian_file.ps  linear_file.ps  makefile.old  makelog  prima.tif  runfrap.sh  (+6 more)
.anjuta/session/: anjuta.session  dock-layout.xml
.libs/: libfraptools-1.0.la  libfraptools-1.0.lai  libfraptools-1.0.so.0
Debug/: BuildLog.htm  frap-tool.ilk  frap-tool.pch  mt.dep  vc80.idb
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
data/: 10s.tif  1m.tif  2m.tif  3m30s.tif  4m.tif  50s.tif  5m.tif  closed.tif
fraptool/: chart.cc  fitting.cc  frap.cc  frap.h  frapimage.cc  frapimage.h  main.cc  selection.cc  selection.h  tiffile.cc  tiffile.h
include/: chart.h  fitting.h  frap.h  frapimage.h  selection.h  tiffile.h
old/: Makefile  Makefile.in  config.status  configure  test_file1.ps  to do
old/include/: chart.h  selection.h  tiffile.h
old/src/: frap.cc  selection.cc
old/test/: test.cpp
src/: chart.cc  chart.lo  fitting.cc  fitting.lo  fitttext  frap.cc  frap.lo  frapimage.cc  libfraptools_1.0_la-chart.lo  libfraptools_1.0_la-fitting.lo  libfraptools_1.0_la-frap.lo  libfraptools_1.0_la-selection.lo  libfraptools_1.0_la-tiffile.lo  main.cc  selection.cc  selection.lo  tiffile.cc  tiffile.lo
src/.deps/: fitting.Po  frap.Po  main.Po  selection.Po  tiffdump.Po  tiffile.Po
test/: tifftest.c  tifftest.cpp
